lab finished, need redo last question

--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dragon Sample mean:  83.3125\n",
+      "Grass Sample mean:  67.27142857142857\n",
+      " Dragon Sample standard deviation:  23.795414982587474\n",
+      " Grass Sample standard deviation:  19.516564074957593\n",
+      "Dragon Sample size is:  32\n",
+      "Grass Sample size is:  70\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "\n",
+    "#H0 : type Dragon HP < type Grass HP\n",
+    "#H1 : type Dragon HP >= type Grass HP\n",
+    "\n",
+    "dragon_hp = df[df[\"Type 1\"]== \"Dragon\"][\"HP\"]\n",
+    "grass_hp = df[df[\"Type 1\"]== \"Grass\"][\"HP\"]\n",
+    "\n",
+    "#In order to calculate test statistic we need\n",
+    "\n",
+    "#sample mean\n",
+    "mean_dragon_hp = dragon_hp.mean()\n",
+    "mean_grass_hp = grass_hp.mean()\n",
+    "print(\"Dragon Sample mean: \", mean_dragon_hp)\n",
+    "print(\"Grass Sample mean: \", mean_grass_hp)\n",
+    "\n",
+    "#standard deviation of sample\n",
+    "s_dragon = dragon_hp.std(ddof=1)\n",
+    "s_grass = grass_hp.std(ddof=1)\n",
+    "print(\" Dragon Sample standard deviation: \", s_dragon)\n",
+    "print(\" Grass Sample standard deviation: \", s_grass)\n",
+    "\n",
+    "#sample size\n",
+    "n_dragon = len(dragon_hp)\n",
+    "n_grass = len(grass_hp)\n",
+    "print(\"Dragon Sample size is: \", n_dragon)\n",
+    "print(\"Grass Sample size is: \", n_grass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=3.3349632905124063, pvalue=0.0015987219490841199, df=50.83784116232685)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st.ttest_ind(dragon_hp, grass_hp, equal_var=False)\n",
+    "\n",
+    "# because p-value < 0.05, we reject the null hypothesis. Therefore, we can say that Dragon HP is greater than Grass HP."
    ]
   },
   {
@@ -317,7 +378,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "#code here\n",
+    "\n",
+    "#H0 : Legendary stats = non Legendary stats\n",
+    "#H1 : Legendary stats != non Legendary stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t_stat</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>significant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>8.98137</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>10.438134</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>7.637078</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>13.41745</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>10.015697</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>11.475044</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            t_stat p_value significant\n",
+       "HP         8.98137     0.0        True\n",
+       "Attack   10.438134     0.0        True\n",
+       "Defense   7.637078     0.0        True\n",
+       "Sp. Atk   13.41745     0.0        True\n",
+       "Sp. Def  10.015697     0.0        True\n",
+       "Speed    11.475044     0.0        True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Separate Legendary and Non-Legendary Pokemon\n",
+    "legendary_df = df[df['Legendary'] == True]\n",
+    "non_legendary_df = df[df['Legendary'] == False]\n",
+    "\n",
+    "# Columns to compare\n",
+    "stat_columns = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "\n",
+    "# Perform t-tests for each stat\n",
+    "test_results = {}\n",
+    "alpha = 0.05\n",
+    "\n",
+    "for stat in stat_columns:\n",
+    "    t_stat, p_value = stats.ttest_ind(legendary_df[stat], non_legendary_df[stat], equal_var=False)\n",
+    "    test_results[stat] = {'t_stat': t_stat, 'p_value': p_value, 'significant': p_value < alpha}\n",
+    "\n",
+    "# Display the results\n",
+    "results_df = pd.DataFrame(test_results).transpose()\n",
+    "\n",
+    "results_df\n",
+    "\n",
+    "# There is a significant difference between the stats of Legendary and Non-Legendary Pokemon for all stats. (p-value is < alpha for all stats)"
    ]
   },
   {
@@ -337,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +628,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,22 +658,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Coordinates of the school and hospital\n",
+    "school_coords = (-118, 37)\n",
+    "hospital_coords = (-122, 34)\n",
+    "\n",
+    "# Function to calculate Euclidean distance\n",
+    "def euclidean_distance(lat1, lon1, lat2, lon2):\n",
+    "    return np.sqrt((lat1 - lat2) ** 2 + (lon1 - lon2) ** 2)\n",
+    "\n",
+    "# Calculate distance from each house to the school and hospital\n",
+    "df['dist_to_school'] = euclidean_distance(df['longitude'], df['latitude'], school_coords[0], school_coords[1])\n",
+    "df['dist_to_hospital'] = euclidean_distance(df['longitude'], df['latitude'], hospital_coords[0], hospital_coords[1])\n",
+    "\n",
+    "# Determine if a house is close to a school or hospital\n",
+    "df['close_to_school_or_hospital'] = (df['dist_to_school'] < 0.50) | (df['dist_to_hospital'] < 0.50)\n",
+    "\n",
+    "# Split the dataset into houses close and far from either a hospital or school\n",
+    "close_df = df[df['close_to_school_or_hospital'] == True]\n",
+    "far_df = df[df['close_to_school_or_hospital'] == False]\n",
+    "\n",
+    "# Perform t-test on median_house_value\n",
+    "t_stat, p_value = stats.ttest_ind(close_df['median_house_value'], far_df['median_house_value'], equal_var=False)\n",
+    "\n",
+    "# Display the results\n",
+    "results = {\n",
+    "    't_stat': t_stat,\n",
+    "    'p_value': p_value,\n",
+    "    'significant_at_5%': p_value < 0.05\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'t_stat': -17.174167998688404,\n",
+       " 'p_value': 5.220018561223529e-05,\n",
+       " 'significant_at_5%': True}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results\n",
+    "\n",
+    "# p-value is < 0.05, showing a statistical significance of the relationship between price and distance to either a school or a hospital."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
